# project-resolution-engine

./: .gitignore  README.md  generate_github_urls.sh  lib_design.md  pyproject.toml
ledgers/: api-ledger.yaml  repository-ledger.yaml  services-ledger.yaml  strategies-ledger.yaml
ledgers/internal/: builtin_repository-ledger.yaml  builtin_strategies-ledger.yaml  builtin_strategy_configs-ledger.yaml  compatibility-ledger.yaml  orchestration-ledger.yaml  resolvelib-ledger.yaml  resolvlib_types-ledger.yaml
ledgers/internal/repositories/: builtin-ledger.yaml  factory-ledger.yaml  registry-ledger.yaml
ledgers/internal/util/: multiformat-ledger.yaml  strategy-ledger.yaml  toml-ledger.yaml
ledgers/model/: graph-ledger.yaml  keys-ledger.yaml  pep-ledger.yaml  resolution-ledger.yaml
src/project_resolution_engine/: __init__.py  api.py  repository.py  services.py  strategies.py
src/project_resolution_engine/internal/: __init__.py  builtin_repository.py  builtin_strategies.py  builtin_strategy_configs.py  compatibility.py  orchestration.py  resolvelib.py  resolvelib_types.py
src/project_resolution_engine/internal/repositories/: builtin.py  factory.py  registry.py
src/project_resolution_engine/internal/util/: multiformat.py  strategy.py  toml.py
src/project_resolution_engine/model/: graph.py  keys.py  pep.py  resolution.py
src/project_resolution_engine/resources/: compatibility-matrix.toml  compatibility-with-presets.toml  compatibility.toml
tests/: ledger-spec.schema.json  test_engine_smoke.py
tests/unit/: BRANCH_LEDGER_SPEC.md  TESTING_CONTRACT.md
tests/unit/base_pkg/: api_test.py  repository_test.py  services_test.py  strategies_test.py
tests/unit/helpers/: helper_validation.py  models_helper.py  models_helper_contract_test.py  serialization_helper.py
tests/unit/internal/: builtin_repository_test.py  builtin_strategies_test.py  builtin_strategy_configs_test.py  compatibility_test.py  orchestration_test.py  resolvelib_test.py  resolvelib_types_test.py
tests/unit/internal/repositories/: builtin_test.py  factory_test.py  registry_test.py
tests/unit/internal/util/: multiformat_test.py  strategy_test.py  toml_test.py
tests/unit/model/: graph_test.py  keys_test.py  pep_test.py  resolution_test.py
