[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "project-resolution-engine"
version = "1.0.0"
description = "Provider-driven dependency resolution engine (wheel-focused)."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { file = "LICENSE" }
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]
keywords = [
    "package",
    "packaging"
]

[project.urls]
Homepage = "https://github.com/Steve973/project-resolution-engine"
Documentation = "https://github.com/Steve973/project-resolution-engine/blob/main/docs/USER_GUIDE.md"
Changelog = "https://github.com/Steve973/project-resolution-engine/blob/main/docs/CHANGELOG.md"
ReleaseNotes = "https://github.com/Steve973/project-resolution-engine/blob/main/docs/RELEASE_NOTES.md"
Contributing = "https://github.com/Steve973/project-resolution-engine/blob/main/docs/DEV_AND_CONTRIB.md"
Source = "https://github.com/Steve973/project-resolution-engine/tree/main"

[tool.poetry]
packages = [{ include = "project_resolution_engine", from = "src" }]

[tool.poetry.dependencies]
packaging = ">=25.0"
requests = ">=2.32.5"
resolvelib = ">=1.2.1"
tomli = ">=2.3.0"
tomli-w = ">=1.2.0"
typing-extensions = ">=4.15.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.12.0"
mypy = ">=1.18.2"
poetry = ">=2.2.1"
pytest = ">=8.4.1"
pytest-cov = ">=7.0.0"
ruff = ">=0.14.5"
types-PyYAML = ">=6.0.12.2"
types-requests = ">=2.32.4.20250913"

[tool.pytest.ini_options]
addopts = ["-ra", "-q", "--import-mode=importlib"]
testpaths = ["."]
python_files = ["*_test.py"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]

[tool.ruff]
# Treat these as your source roots
src = ["src", "tests"]

line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
files = ["src/project_resolution_engine"]
explicit_package_bases = true
namespace_packages = true
strict_optional = true
pretty = true
show_error_codes = true

# Tune as you go
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
